fix post title style on small devices

--- a/src/app.scss
+++ b/src/app.scss
@@ -32,6 +32,9 @@ h6,
 }
 .page-title {
 	@apply text-8xl font-semibold;
+	overflow: hidden;
+    white-space: break-spaces;
+    overflow-wrap: break-word;
 }
 
 .post-content h1 {
